terraform-website-infrastructure-2/modules/security_groups/main.tf

# Define security groups to control access: Configure the security group, using ssh_ip to restrict SSH access.

resource "aws_security_group" "nginx_sg" {
  description = "Security group for Nginx instances"
  vpc_id = var.vpc_id
  

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow HTTP from all
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_ip]  # Allow SSH from specified IP
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nginx_sg"
  }
}
